--- a/Wpf/Wpf.csproj
+++ b/Wpf/Wpf.csproj
@@ -26,7 +26,7 @@
 
     <ItemGroup>
         <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
-        <Content Include="logo.ico"  CopyToOutputDirectory="PreserveNewest" />
+        <Content Include="logo.ico" />
     </ItemGroup>
 
     <ItemGroup>
