--- a/Wpf/Wpf.csproj
+++ b/Wpf/Wpf.csproj
@@ -25,6 +25,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <None Remove="NLog.config" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Content Include="NLog.config" CopyToOutputDirectory="PreserveNewest" />
         <Content Include="appsettings.json" CopyToOutputDirectory="PreserveNewest" />
         <Content Include="logo.ico" />
     </ItemGroup>
@@ -36,6 +41,7 @@
         <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" PrivateAssets="all" />
         <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" PrivateAssets="all" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="5.3.3" />
     </ItemGroup>
 
     <ItemGroup>
