proper use of NLog

--- a/Wpf/NLog.config
+++ b/Wpf/NLog.config
@@ -2,10 +2,10 @@
 <configuration>
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info">
         <targets>
-            <target xsi:type="File" name="allfile" fileName="${shortdate}.log" layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+            <target xsi:type="File" name="allfile" fileName="Logs/${shortdate}.${level}.log" layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message} | ${all-event-properties} ${exception:format=tostring}" />
         </targets>
         <rules>
-            <logger name="*" minlevel="Warning" writeTo="allfile" />
+            <logger name="*" minlevel="Information" writeTo="allfile" />
         </rules>
     </nlog>
 </configuration>
