Adding Inno Setup file

--- a/Wpf/NLog.config
+++ b/Wpf/NLog.config
@@ -5,7 +5,7 @@
             <target xsi:type="File" name="allfile" fileName="Logs/${shortdate}.${level}.log" layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message} | ${all-event-properties} ${exception:format=tostring}" />
         </targets>
         <rules>
-            <logger name="*" minlevel="Information" writeTo="allfile" />
+            <logger name="*" minlevel="Warning" writeTo="allfile" />
         </rules>
     </nlog>
 </configuration>
