Cleaning application settings

--- a/Wpf/appsettings.json
+++ b/Wpf/appsettings.json
@@ -3,7 +3,6 @@
         "DefaultConnection": "DataSource=BingWallpaper.db;"
     },
     "ApplicationSettings": {
-        "ApplicationName": "BingWallpaper",
-        "RunOnStartup": false
+        "RunOnStartup": true
     }
 }
