--- a/Wpf/appsettings.json
+++ b/Wpf/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
     "ApplicationSettings": {
-        "RunOnStartup": true
+        "RunOnStartup": true,
+        "InitialLoadingImageCount": 10
     }
 }
