Move base path to appsettings.json file

--- a/Wpf/appsettings.json
+++ b/Wpf/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
     "ApplicationSettings": {
         "RunOnStartup": true,
-        "InitialLoadingImageCount": 10
+        "InitialLoadingImageCount": 10,
+        "BasePath": "%userprofile%\\Pictures\\BingWallpaper"
     }
 }
