--- a/Wpf/NLog.config
+++ b/Wpf/NLog.config
@@ -1,11 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info">
-        <targets>
-            <target xsi:type="File" name="allfile" fileName="Logs/${shortdate}.${level}.log" layout="${longdate} | ${uppercase:${level}} | ${logger} | ${message} | ${all-event-properties} ${exception:format=tostring}" />
-        </targets>
-        <rules>
-            <logger name="*" minlevel="Warning" writeTo="allfile" />
-        </rules>
-    </nlog>
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info">
+    <targets>
+      <target xsi:type="File" name="allfile" fileName="${basedir}/logs/${level}_${shortdate}.txt" layout="${time} | ${level:uppercase=true} | ${logger:shortName=true} | ${message} ${exception:format=toString,Data} | ${logger} | ${all-event-properties}" />
+    </targets>
+    <rules>
+      <logger name="System.*" minlevel="Error" writeTo="allfile" />
+      <logger name="Microsoft.AspNetCore.*" minlevel="Error" writeTo="allfile" />
+      <logger name="Microsoft.EntityFrameworkCore.*" minlevel="Error" writeTo="allfile" />
+      <logger name="*" minlevel="Warning" writeTo="allfile" />
+    </rules>
+  </nlog>
 </configuration>
