--- a/Wpf/NLog.config
+++ b/Wpf/NLog.config
@@ -2,7 +2,7 @@
 <configuration>
   <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" autoReload="true" internalLogLevel="Info">
     <targets>
-      <target xsi:type="File" name="allfile" fileName="${basedir}/logs/${level}_${shortdate}.txt" layout="${time} | ${level:uppercase=true} | ${logger:shortName=true} | ${message} ${exception:format=toString,Data} | ${logger} | ${all-event-properties}" />
+      <target xsi:type="File" name="allfile" fileName="Logs/${level}_${shortdate}.txt" layout="${time} | ${level:uppercase=true} | ${logger:shortName=true} | ${message} ${exception:format=toString,Data} | ${logger} | ${all-event-properties}" />
     </targets>
     <rules>
       <logger name="System.*" minlevel="Error" writeTo="allfile" />
